[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/map/tiles.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/MobSpawnTimer.gd" type="Script" id=3]
[ext_resource path="res://scenes/Background.gd" type="Script" id=4]
[ext_resource path="res://interface/Interface.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/theme/font/comfortaa_tips.tres" type="DynamicFont" id=6]

[sub_resource type="TileSet" id=1]
0/name = "tiles.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 200, 200 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 50, 50 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1000, 0, 0, 0, 0, 0, 1000, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[node name="Background" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 50, 50 )
format = 1
tile_data = PoolIntArray( 0, 0, 1, 1, 0, 196611, 2, 0, 1, 3, 0, 131074, 4, 0, 1, 5, 0, 131073, 6, 0, 131072, 7, 0, 196611, 8, 0, 1, 9, 0, 196610, 10, 0, 196611, 11, 0, 0, 12, 0, 196609, 13, 0, 2, 14, 0, 65538, 15, 0, 131072, 16, 0, 131072, 17, 0, 65537, 18, 0, 131075, 19, 0, 131074, 65536, 0, 3, 65537, 0, 0, 65538, 0, 196608, 65539, 0, 131075, 65540, 0, 65537, 65541, 0, 2, 65542, 0, 131073, 65543, 0, 2, 65544, 0, 65538, 65545, 0, 65538, 65546, 0, 131072, 65547, 0, 131073, 65548, 0, 2, 65549, 0, 65536, 65550, 0, 196610, 65551, 0, 196609, 65552, 0, 65537, 65553, 0, 1, 65554, 0, 196610, 65555, 0, 196611, 131072, 0, 131075, 131073, 0, 196608, 131074, 0, 2, 131075, 0, 196610, 131076, 0, 196611, 131077, 0, 131073, 131078, 0, 65536, 131079, 0, 131075, 131080, 0, 0, 131081, 0, 131074, 131082, 0, 1, 131083, 0, 131073, 131084, 0, 65539, 131085, 0, 196610, 131086, 0, 2, 131087, 0, 65539, 131088, 0, 196610, 131089, 0, 65538, 131090, 0, 65536, 131091, 0, 196608, 196608, 0, 131074, 196609, 0, 131073, 196610, 0, 65536, 196611, 0, 131074, 196612, 0, 2, 196613, 0, 196609, 196614, 0, 1, 196615, 0, 131072, 196616, 0, 196609, 196617, 0, 196611, 196618, 0, 131075, 196619, 0, 65537, 196620, 0, 65539, 196621, 0, 131072, 196622, 0, 131072, 196623, 0, 196611, 196624, 0, 3, 196625, 0, 131075, 196626, 0, 65537, 196627, 0, 131075, 262144, 0, 131072, 262145, 0, 1, 262146, 0, 196608, 262147, 0, 196610, 262148, 0, 196610, 262149, 0, 2, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 196611, 262154, 0, 196611, 262155, 0, 196609, 262156, 0, 65539, 262157, 0, 196610, 262158, 0, 65538, 262159, 0, 1, 262160, 0, 131072, 262161, 0, 196610, 262162, 0, 196609, 262163, 0, 65536, 327680, 0, 196608, 327681, 0, 196610, 327682, 0, 196609, 327683, 0, 131074, 327684, 0, 65537, 327685, 0, 131075, 327686, 0, 65536, 327687, 0, 131072, 327688, 0, 65539, 327689, 0, 65536, 327690, 0, 1, 327691, 0, 131074, 327692, 0, 65539, 327693, 0, 3, 327694, 0, 3, 327695, 0, 0, 327696, 0, 196608, 327697, 0, 65538, 327698, 0, 196608, 327699, 0, 196609, 393216, 0, 131075, 393217, 0, 2, 393218, 0, 2, 393219, 0, 131075, 393220, 0, 196611, 393221, 0, 131073, 393222, 0, 1, 393223, 0, 131073, 393224, 0, 196610, 393225, 0, 2, 393226, 0, 196609, 393227, 0, 1, 393228, 0, 65537, 393229, 0, 3, 393230, 0, 3, 393231, 0, 3, 393232, 0, 131074, 393233, 0, 0, 393234, 0, 65536, 393235, 0, 3, 458752, 0, 2, 458753, 0, 65537, 458754, 0, 131073, 458755, 0, 0, 458756, 0, 131073, 458757, 0, 131074, 458758, 0, 65536, 458759, 0, 196610, 458760, 0, 2, 458761, 0, 65537, 458762, 0, 131074, 458763, 0, 65539, 458764, 0, 3, 458765, 0, 3, 458766, 0, 3, 458767, 0, 3, 458768, 0, 196609, 458769, 0, 131072, 458770, 0, 196608, 458771, 0, 131075, 524288, 0, 65539, 524289, 0, 196611, 524290, 0, 0, 524291, 0, 65536, 524292, 0, 1, 524293, 0, 0, 524294, 0, 131074, 524295, 0, 196611, 524296, 0, 65539, 524297, 0, 0, 524298, 0, 65536, 524299, 0, 196608, 524300, 0, 3, 524301, 0, 3, 524302, 0, 3, 524303, 0, 3, 524304, 0, 65536, 524305, 0, 65536, 524306, 0, 2, 524307, 0, 1, 589824, 0, 131075, 589825, 0, 196609, 589826, 0, 65538, 589827, 0, 131073, 589828, 0, 65536, 589829, 0, 196610, 589830, 0, 3, 589831, 0, 2, 589832, 0, 2, 589833, 0, 131072, 589834, 0, 65538, 589835, 0, 65537, 589836, 0, 3, 589837, 0, 3, 589838, 0, 3, 589839, 0, 3, 589840, 0, 196611, 589841, 0, 131074, 589842, 0, 131073, 589843, 0, 3, 655360, 0, 131073, 655361, 0, 3, 655362, 0, 65538, 655363, 0, 196608, 655364, 0, 65539, 655365, 0, 65538, 655366, 0, 3, 655367, 0, 65539, 655368, 0, 65538, 655369, 0, 131075, 655370, 0, 196610, 655371, 0, 1, 655372, 0, 0, 655373, 0, 3, 655374, 0, 3, 655375, 0, 3, 655376, 0, 65539, 655377, 0, 0, 655378, 0, 65536, 655379, 0, 131074, 720896, 0, 196609, 720897, 0, 196611, 720898, 0, 65538, 720899, 0, 131073, 720900, 0, 131074, 720901, 0, 65537, 720902, 0, 196609, 720903, 0, 65539, 720904, 0, 131075, 720905, 0, 65536, 720906, 0, 131073, 720907, 0, 196611, 720908, 0, 65538, 720909, 0, 196608, 720910, 0, 0, 720911, 0, 65537, 720912, 0, 65538, 720913, 0, 2, 720914, 0, 131074, 720915, 0, 65539 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 514, 298 )

[node name="MobPath" type="Path2D" parent="Player"]
position = Vector2( -514, -298 )
curve = SubResource( 2 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="Player/MobPath"]

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="Interface" parent="Player/Camera2D" instance=ExtResource( 5 )]
margin_left = -490.0
margin_top = -298.0
margin_right = -490.0
margin_bottom = -147.0
rect_scale = Vector2( 0.65, 0.65 )
rect_pivot_offset = Vector2( -90, 89 )

[node name="TimeCounter" type="Label" parent="Player/Camera2D"]
margin_left = -122.0
margin_top = -250.0
margin_right = 62.0
margin_bottom = -210.0
rect_scale = Vector2( 1.2, 1.2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "00:00"
align = 1

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../Camera2D")

[node name="PickupSpawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="MobSpawnTimer" type="Timer" parent="."]
script = ExtResource( 3 )

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="player_position_changed" from="Player" to="." method="_on_Player_player_position_changed"]
[connection signal="timeout" from="PickupSpawnTimer" to="." method="_on_PickupSpawnTimer_timeout"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]
[connection signal="timeout" from="MobSpawnTimer" to="MobSpawnTimer" method="_on_MobSpawnTimer_timeout"]
